syntax = "proto3";

option csharp_namespace = "Drift.Networking.Grpc.Generated";

package peer;

// AgentService?
service PeerService {
  rpc PeerStream (stream PeerMessage) returns (stream PeerMessage);
}

message PeerMessage {
  string message_type = 1;
  string message = 2;
  string correlation_id = 3;  // For request-response matching
  string reply_to = 4;        // If this is a response, which request it replies to
}
